# Squidl

./: .gitignore  CMakeLists.txt
Squidl/base/: UIElement.cpp
Squidl/core/: EventDispatcher.cpp  UIContext.cpp  UIEvent.cpp  UIManager.cpp
Squidl/editor/: DesignSerializer.cpp
Squidl/elements/:  Button.cpp  Backdrop.cpp  Button.cpp  Checkbox.cpp  Input.cpp  Label.cpp  ToggleSwitch.cpp
Squidl/layouts/: GridLayout.cpp  HBoxLayout.cpp  Layout.cpp  VBoxLayout.cpp
Squidl/managers/: UITheme.cpp  UIThemeManager.cpp
Squidl/renderers/: SDL2Renderer.cpp
include/Squidl/: Squidl.h  SquidlConfig.h
include/Squidl/base/: EventListener.h  IClickable.h  UIElement.h
include/Squidl/core/: EventDispatcher.h  IRenderer.h  UIAlignment.h  UIAnchor.h  UIContext.h  UIEvent.h  UIManager.h
include/Squidl/elements/: Backdrop.h  Button.h  Checkbox.h  Input.h  Label.h  ToggleSwitch.h
include/Squidl/layouts/: GridLayout.h  HBoxLayout.h  Layout.h  VBoxLayout.h
include/Squidl/managers/: TextureManager.h  UITheme.h  UIThemeManager.h
include/Squidl/renderers/: SDL2Renderer.h
include/Squidl/utils/: Color.h  Logger.h  Point.h  Timer.h  UIRect.h
src/: main.cpp
tools/SquidlInk/: CMakeLists.txt
